vscode: disable trust check

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -40,6 +40,8 @@
 
   "remote.SSH.showLoginTerminal": true,
 
+  "security.workspace.trust.enabled": false,
+
   "search.showLineNumbers": false,
   "search.exclude": {
     "**/.git": true,
