vscode: automatically update Go tools

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -81,6 +81,7 @@
   //
   // ============================================================================
 
+  "go.toolsManagement.autoUpdate": true,
   "go.useLanguageServer": true,
 
   "[html]": {
