git: ignore node_modules directory

--- a/git/.gitignore
+++ b/git/.gitignore
@@ -11,6 +11,9 @@ __pycache__/
 .env
 .envrc
 
+# Node
+node_modules/
+
 # This file assumes that it is at the user's home directory
 /.android/
 /.angular-config.json
