vscode: add more contacts

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -240,6 +240,8 @@
     "VLAN",
     "Wadsworth",
     "Wayland",
+    "Winby",
+    "Yulia",
     "Zopa",
     "Zuha",
     "Zwiessele",
@@ -333,22 +335,34 @@
   ],
 
   "markdown-contacts.names": [
+    "AliParsa",
     "AngelaSantin",
     "ArgyriosGounaris",
     "BenKnowles",
+    "BenWindy",
     "CarlosFerreira",
     "DavidTorralba",
     "DouglasHindson",
     "EyalKazin",
+    "GuillaumeAllain",
     "GuysLeaver",
+    "HajyraIlyas",
     "JamesStrong",
     "KalyanTeja",
+    "LauraPimpin",
     "LeszekKowalczuk",
     "LorenzoBarasti",
+    "ManonAbiteboul",
     "MateiDragu",
     "MaxZwiessele",
+    "PaulThomas",
     "RupertBedford",
+    "SaurabhDeb",
+    "SteveDavis",
     "ThemisSavvidis",
+    "TomParker",
+    "YonNuta",
+    "YuliaChan",
   ],
 
   "notebook.cellToolbarLocation": {
