vscode: add more contacts

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -239,6 +239,7 @@
     "UWSGI",
     "VLAN",
     "Wadsworth",
+    "Wasylow",
     "Wayland",
     "Winby",
     "Yulia",
@@ -350,14 +351,19 @@
     "JamesStrong",
     "KalyanTeja",
     "LauraPimpin",
+    "LaurenceSteele",
+    "LavanyaKonduru",
     "LeszekKowalczuk",
     "LorenzoBarasti",
     "ManonAbiteboul",
     "MateiDragu",
+    "MaxWasylow",
     "MaxZwiessele",
     "PaulThomas",
     "RupertBedford",
     "SaurabhDeb",
+    "ShiyuPan",
+    "ShrinArulselvan",
     "SteveDavis",
     "ThemisSavvidis",
     "TomParker",
