vscode: update user dictionary

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -336,6 +336,7 @@
   ],
 
   "markdown-contacts.names": [
+    "AlasdairDalgarno",
     "AliParsa",
     "AngelaSantin",
     "ArgyriosGounaris",
@@ -349,6 +350,7 @@
     "GuysLeaver",
     "HajyraIlyas",
     "JamesStrong",
+    "JeanPatrickFrancoia",
     "KalyanTeja",
     "LauraPimpin",
     "LaurenceSteele",
