--- a/t/.config/t/config.json
+++ b/t/.config/t/config.json
@@ -21,7 +21,7 @@
     {
       "id": 107456600,
       "name": "Health and training",
-      "entries": ["Meditate", "Training"]
+      "entries": ["Meditate", "Training", "Stretching"]
     }
   ]
 }
