vscode: update user dictionary

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -212,7 +212,9 @@
     "Kazin",
     "Keepass",
     "Keren",
+    "Konduru",
     "Kowalczuk",
+    "Lavanya",
     "Leszek",
     "Maciulis",
     "Manon",
@@ -252,6 +254,8 @@
     "autoanálisis",
     "autogestión",
     "cookiecutter",
+    "datagram",
+    "datagrams",
     "datastore",
     "deduplication",
     "dtgoitia",
