starship: show hostname

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -33,3 +33,8 @@ format = "$time"
 
 [cmd_duration]
 disabled = true
+
+[hostname]
+ssh_only = false
+format =  "[$hostname](dimmed) "
+disabled = false
