vscode: add more contacts

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -315,6 +315,7 @@
     "MaxWasylow",
     "MaxZwiessele",
     "PaulThomas",
+    "PraveenHirsave",
     "RupertBedford",
     "SaurabhDeb",
     "ShiyuPan",
