vscode: add more contacts

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -300,10 +300,12 @@
     "DouglasHindson",
     "EyalKazin",
     "GuillaumeAllain",
+    "GuysBevington",
     "GuysLeaver",
     "HajyraIlyas",
     "JamesStrong",
     "JeanPatrickFrancoia",
+    "JeremyTaylor",
     "KalyanTeja",
     "LauraPimpin",
     "LaurenceSteele",
