vscode: move contacts to workspaces

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -288,45 +288,8 @@
     "plaintext"
   ],
 
-  "markdown-contacts.names": [
-    "AlasdairDalgarno",
-    "AliParsa",
-    "AngelaSantin",
-    "ArgyriosGounaris",
-    "BenKnowles",
-    "BenWindy",
-    "CarlosFerreira",
+  "markdown-contacts.globalNames": [
     "DavidTorralba",
-    "DouglasHindson",
-    "EyalKazin",
-    "GuillaumeAllain",
-    "GuysBevington",
-    "GuysLeaver",
-    "HajyraIlyas",
-    "JamesStrong",
-    "JeanPatrickFrancoia",
-    "JeremyTaylor",
-    "KalyanTeja",
-    "LauraPimpin",
-    "LaurenceSteele",
-    "LavanyaKonduru",
-    "LeszekKowalczuk",
-    "LorenzoBarasti",
-    "ManonAbiteboul",
-    "MateiDragu",
-    "MaxWasylow",
-    "MaxZwiessele",
-    "PaulThomas",
-    "PraveenHirsave",
-    "RupertBedford",
-    "SaurabhDeb",
-    "ShiyuPan",
-    "ShrinArulselvan",
-    "SteveDavis",
-    "ThemisSavvidis",
-    "TomParker",
-    "YonNuta",
-    "YuliaChan",
   ],
 
   "notebook.cellToolbarLocation": {
