--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -7,6 +7,7 @@ CustomProxyLocation=
 Enabled=true
 
 [GUI]
+ApplicationTheme=dark
 CheckForUpdates=false
 MinimizeOnClose=false
 MinimizeOnStartup=false
