--- a/gnome-settings/.config/dconf/settings.ini
+++ b/gnome-settings/.config/dconf/settings.ini
@@ -13,7 +13,7 @@ size=(870, 690)
 state=87168
 
 [org/gnome/control-center]
-last-panel='power'
+last-panel='sound'
 
 [org/gnome/desktop/app-folders]
 folder-children=['Utilities', 'YaST']
@@ -29,23 +29,35 @@ categories=['X-SuSE-YaST']
 name='suse-yast.directory'
 translate=true
 
+[org/gnome/desktop/calendar]
+show-weekdate=true
+
 [org/gnome/desktop/input-sources]
 per-window=false
+show-all-sources=false
 sources=[('xkb', 'us'), ('xkb', 'es'), ('xkb', 'gb')]
 xkb-options=['lv3:ralt_switch']
 
 [org/gnome/desktop/interface]
+clock-show-seconds=true
+clock-show-weekday=true
+font-antialiasing='grayscale'
+font-hinting='slight'
 gtk-im-module='gtk-im-context-simple'
+gtk-theme='Adwaita-dark'
 show-battery-percentage=true
 
 [org/gnome/desktop/notifications]
-application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc']
+application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc', 'org-gnome-tweaks']
 
 [org/gnome/desktop/notifications/application/firefox-developer-edition]
 application-id='firefox-developer-edition.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-tweaks]
+application-id='org.gnome.tweaks.desktop'
 
 [org/gnome/desktop/notifications/application/org-keepassxc-keepassxc]
 application-id='org.keepassxc.KeePassXC.desktop'
@@ -54,6 +66,7 @@ application-id='org.keepassxc.KeePassXC.desktop'
 application-id='telegramdesktop.desktop'
 
 [org/gnome/desktop/peripherals/mouse]
+accel-profile='default'
 natural-scroll=false
 
 [org/gnome/desktop/peripherals/touchpad]
@@ -67,11 +80,18 @@ idle-delay=uint32 180
 
 [org/gnome/desktop/sound]
 event-sounds=true
-theme-name='__custom'
+theme-name='freedesktop'
+
+[org/gnome/desktop/wm/preferences]
+button-layout='appmenu:close'
+num-workspaces=1
 
 [org/gnome/evolution-data-server]
 migrated=true
 network-monitor-gio-name=''
+
+[org/gnome/mutter]
+dynamic-workspaces=false
 
 [org/gnome/nautilus/preferences]
 default-folder-viewer='icon-view'
@@ -102,6 +122,9 @@ locations=[<(uint32 2, <('London', 'EGWU', true, [(0.89971722940307675, -0.00727
 
 [org/gnome/software]
 check-timestamp=int64 1629698410
+
+[org/gnome/tweaks]
+show-extensions-notice=false
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
