t: add CSS entries

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -27,6 +27,16 @@
       ]
     },
     {
+      "id": 174067391,
+      "name": "CSS Investments",
+      "entries": [
+        "Coding",
+        "General",
+        "Meeting",
+        "Preparation (no charge)"
+      ]
+    },
+    {
       "id": 107456600,
       "name": "Health and training",
       "entries": ["Meditate", "Training", "Stretching"]
