--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -11,6 +11,7 @@
       "entries": [
         "Admin",
         "General",
+        "Looking for contracts",
         "Meeting",
         "Interview"
       ]
