t: add Karat entries

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -38,6 +38,17 @@
       ]
     },
     {
+      "id": 174277494,
+      "name": "Karat",
+      "entries": [
+        "Coding",
+        "General",
+        "Meeting",
+        "Preparation (no charge)",
+        "Training"
+      ]
+    },
+    {
       "id": 107456600,
       "name": "Health and training",
       "entries": ["Meditate", "Training", "Stretching"]
