t: add "Training (self-study) @ Karat"

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -45,7 +45,8 @@
         "General",
         "Meeting",
         "Preparation (no charge)",
-        "Training"
+        "Training",
+        "Training (self-study)"
       ]
     },
     {
