--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -6,8 +6,9 @@ window:
 # Blank space added around the window in pixels. This padding is not scaled
 # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 10
+    x: 4
     y: 4
+  decorations: "none"
 
 # Colors (One Dark)
 # Source: https://github.com/eendroroy/alacritty-theme/blob/master/themes/one_dark.yaml
