tmux: change status bar colour

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,8 +52,21 @@ bind-key p paste-buffer
 # Use a 256 colour terminal
 set -g default-terminal "screen-256color"
 
+#=======================================================================================
+# Status bar
+
+# defaults here: https://unix.stackexchange.com/a/175440/357690
+
+# Set position
+set -g status-position bottom
+
+# background colour
+set-option -g status-style "bg=#333333,fg=#bbbbbb"
+
+#=======================================================================================
+
 # Save environment automatically every 5 mins
-set -g @continuum-save-interval '5'
+# set -g @continuum-save-interval '5'
 
 # Automatically restore the space on start
 # set -g @continuum-restore 'on'
