--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -10,6 +10,12 @@ window:
     y: 4
   decorations: "none"
 
+# Font configuration
+font:
+  # Point size: a gap can appear at the bottom of the emulator, depending on this value
+  # and the height of the emulator window
+  size: 10.0
+
 # Colors (One Dark)
 # Source: https://github.com/eendroroy/alacritty-theme/blob/master/themes/one_dark.yaml
 colors:
