tmux: change status bar format to be cleaner

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,8 +57,22 @@ set -g default-terminal "screen-256color"
 
 # defaults here: https://unix.stackexchange.com/a/175440/357690
 
-# Set position
+# Show status bar
+set -g status on
+
+# Set status bar at the bottom
 set -g status-position bottom
+
+# Do not show anything on the right side
+set -g status-right ""
+
+# Do not show the session number on the left
+set -g status-left " "
+
+# Left side: gray out window names and highlight active one
+set -g status-left-style "fg=#777777"
+set -g window-status-style "fg=#777777"
+set -g window-status-current-style "fg=blue"
 
 # background colour
 set-option -g status-style "bg=#333333,fg=#bbbbbb"
