t: add "Interviewing candidates @ Karat"

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -43,6 +43,7 @@
       "entries": [
         "Coding",
         "General",
+        "Interviewing candidates",
         "Meeting",
         "Preparation (no charge)",
         "Training",
