t: add "Write-ups" to Karat

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -36,7 +36,8 @@
         "Meeting",
         "Preparation (no charge)",
         "Training",
-        "Training (self-study)"
+        "Training (self-study)",
+        "Write-ups"
       ]
     },
     {
