wipman: update config

--- a/wip-manager/.config/wip-manager/config.json
+++ b/wip-manager/.config/wip-manager/config.json
@@ -1,3 +1,32 @@
 {
-  "wip_path": "~/Dropbox/projects-dropbox/WIP_TODOs.md"
+  "wip_path": "/home/dtg/Dropbox/projects-dropbox/WIP_TODOs.md",
+  "archive_path": "/home/dtg/Dropbox/projects-dropbox/archived_TODOs.md",
+  "tags": [
+    "2109bio",
+    "accountancy",
+    "accounting",
+    "angela",
+    "babylon",
+    "billy",
+    "chores",
+    "coding",
+    "css",
+    "finance",
+    "fitness",
+    "health",
+    "hiru",
+    "home",
+    "idea",
+    "karat",
+    "laptop",
+    "lets_assist",
+    "new_laptop",
+    "social",
+    "transport",
+    "trip",
+    "trips",
+    "walix",
+    "wipman",
+    "wiserfunding",
+  ],
 }
