vscode: update todo-tree config

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -310,6 +310,7 @@
     "foreground": "magenta",
     "type": "tag"
   },
+  "todo-tree.tree.showScanModeButton": false,
   "todo-tree.general.tags": [
     "TODO",
     "ToDo",
