vscode: support EN+ES and sort cspell user words

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -159,50 +159,23 @@
     "restructuredtext",
     "text",
   ],
-
+  "cSpell.language": "en,es-ES",
   "cSpell.userWords": [
-    "APAC",
+    "aita",
+    "algo",
     "Ander",
+    "anynomisation",
+    "APAC",
     "Atlassian",
+    "autoanálisis",
+    "autogestión",
+    "Colbourne",
+    "Conor",
+    "cookiecutter",
+    "Cotswolds",
     "COVID",
     "CQRS",
     "CSRF",
-    "Colbourne",
-    "Conor",
-    "Cotswolds",
-    "Eyeo",
-    "Farisha",
-    "GDPR",
-    "Goitia",
-    "Grafana",
-    "HMRC",
-    "Ibai",
-    "Iturricha",
-    "Javi",
-    "Karolina",
-    "Kasia",
-    "Keepass",
-    "Mbps",
-    "Poliamor",
-    "Postgres",
-    "Primazo",
-    "React's",
-    "SCSRE",
-    "SSDLC",
-    "Scrapy",
-    "Terraform",
-    "Torralba",
-    "UWSGI",
-    "VLAN",
-    "Wayland",
-    "Zopa",
-    "Zwiessele",
-    "aita",
-    "algo",
-    "anynomisation",
-    "autoanálisis",
-    "autogestión",
-    "cookiecutter",
     "datagram",
     "datagrams",
     "datastore",
@@ -211,15 +184,30 @@
     "ebitda",
     "eneatipo",
     "eneatipos",
+    "Eyeo",
+    "Farisha",
+    "GDPR",
+    "Goitia",
+    "Grafana",
     "hardcoded",
+    "hiru",
+    "HMRC",
+    "Ibai",
+    "idempotency",
     "immunosuppressed",
+    "Iturricha",
+    "Javi",
     "jira",
     "kanban",
+    "Karolina",
+    "Kasia",
+    "Keepass",
     "kubectl",
     "kubernetes",
     "lockdown",
     "macronutrient",
     "macronutrients",
+    "Mbps",
     "microservice",
     "microservices",
     "microsevice",
@@ -228,6 +216,7 @@
     "miniflows",
     "mismeasurement",
     "monkeypatching",
+    "Monzo",
     "multitenancy",
     "neighbour",
     "neighbours",
@@ -236,28 +225,43 @@
     "perfeccionista",
     "performant",
     "pipenv",
+    "Poliamor",
     "poliamorosa",
     "poliamoroso",
     "polinormatividad",
+    "Postgres",
     "preprod",
+    "Primazo",
     "pytest",
+    "React's",
     "repos",
     "resizeable",
     "restructuration",
     "románticamente",
     "sapiosexual",
+    "Scrapy",
+    "SCSRE",
     "shipcat",
     "solutionize",
+    "SSDLC",
     "supernode",
     "supernodes",
+    "Terraform",
     "tmux",
+    "Torralba",
     "triaging",
     "undertriage",
     "unreusable",
+    "UWSGI",
     "venv",
     "virtualenv",
+    "VLAN",
     "voyeurismo",
-    "xmonad"
+    "Wayland",
+    "wipman",
+    "xmonad",
+    "Zopa",
+    "Zwiessele"
   ],
 
   "git-graph.commitDetailsView.location": "Docked to Bottom",
