t: add "Interview setup" to Karat

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -33,6 +33,7 @@
         "Coding",
         "General",
         "Interviewing candidates",
+        "Interview setup",
         "Meeting",
         "Preparation (no charge)",
         "Training",
