t: add "Strategy preparation" to hiru

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -13,7 +13,8 @@
         "General",
         "Looking for contracts",
         "Meeting",
-        "Interview"
+        "Interview",
+        "Strategy preparation"
       ]
     },
     {
