wipman: update tags

--- a/wip-manager/.config/wip-manager/config.json
+++ b/wip-manager/.config/wip-manager/config.json
@@ -3,7 +3,7 @@
   "archive_path": "/home/dtg/Dropbox/projects-dropbox/archived_TODOs.md",
   "tags": [
     "2109bio",
-    "accountancy",
+    "2112bio",
     "accounting",
     "angela",
     "babylon",
@@ -22,6 +22,7 @@
     "lets_assist",
     "new_laptop",
     "social",
+    "tempus",
     "transport",
     "trip",
     "trips",
