--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -14,6 +14,7 @@ CompactMode=true
 HideToolbar=false
 MinimizeOnClose=false
 MinimizeOnStartup=false
+MonospaceNotes=true
 TrayIconAppearance=monochrome-light
 
 [KeeShare]
