--- a/gnome-settings/.config/dconf/settings.ini
+++ b/gnome-settings/.config/dconf/settings.ini
@@ -1,19 +1,53 @@
 [org/gnome/GWeather]
 temperature-unit='centigrade'
 
+[org/gnome/Totem]
+active-plugins=['save-file', 'autoload-subtitles', 'screensaver', 'vimeo', 'apple-trailers', 'open-directory', 'screenshot', 'recent', 'rotation', 'variable-rate', 'movie-properties', 'skipto', 'media-player-keys']
+subtitle-encoding='UTF-8'
+
 [org/gnome/Weather]
 locations=[<(uint32 2, <('London Borough of Haringey, United Kingdom', '', false, [(0.90037923017036436, -0.0018397534144189839)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
 
+[org/gnome/baobab/ui]
+window-size=(960, 1048)
+window-state=87168
+
+[org/gnome/calculator]
+accuracy=9
+angle-units='degrees'
+base=10
+button-mode='basic'
+number-format='automatic'
+show-thousands=false
+show-zeroes=false
+source-currency=''
+source-units='degree'
+target-currency=''
+target-units='radian'
+window-position=(973, 224)
+word-size=64
+
+[org/gnome/cheese]
+burst-delay=1000
+camera='Integrated Camera  Integrated C'
+photo-x-resolution=640
+photo-y-resolution=480
+video-x-resolution=640
+video-y-resolution=480
+
 [org/gnome/clocks]
-world-clocks=[{'location': <(uint32 2, <('London', 'EGWU', true, [(0.89971722940307675, -0.007272211034407213)], [(0.89884456477707964, -0.0020362232784242244)])>)>}, {'location': <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>}]
+world-clocks=[{'location': <(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>}, {'location': <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>}, {'location': <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>}, {'location': <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>}]
 
 [org/gnome/clocks/state/window]
 panel-id='world'
-size=(870, 690)
+size=(960, 524)
 state=87168
 
 [org/gnome/control-center]
-last-panel='sound'
+last-panel='bluetooth'
+
+[org/gnome/desktop/a11y/magnifier]
+mag-factor=2.0
 
 [org/gnome/desktop/app-folders]
 folder-children=['Utilities', 'YaST']
@@ -33,6 +67,7 @@ translate=true
 show-weekdate=true
 
 [org/gnome/desktop/input-sources]
+mru-sources=[('xkb', 'us'), ('xkb', 'es'), ('xkb', 'gb')]
 per-window=false
 show-all-sources=false
 sources=[('xkb', 'us'), ('xkb', 'es'), ('xkb', 'gb')]
@@ -47,14 +82,32 @@ gtk-im-module='gtk-im-context-simple'
 gtk-theme='Adwaita-dark'
 show-battery-percentage=true
 
+[org/gnome/desktop/media-handling]
+autorun-x-content-ignore=@as []
+autorun-x-content-open-folder=@as []
+autorun-x-content-start-app=['x-content/unix-software', 'x-content/ostree-repository', 'x-content/audio-player']
+
 [org/gnome/desktop/notifications]
-application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc', 'org-gnome-tweaks']
+application-children=['gnome-power-panel', 'telegramdesktop', 'firefox-developer-edition', 'org-keepassxc-keepassxc', 'org-gnome-tweaks', 'teams', 'zoom', 'org-gnome-nautilus', 'libreoffice-calc', 'slack', 'gnome-network-panel', 'org-gnome-baobab', 'pycharm-professional']
+show-banners=true
 
 [org/gnome/desktop/notifications/application/firefox-developer-edition]
 application-id='firefox-developer-edition.desktop'
 
+[org/gnome/desktop/notifications/application/gnome-network-panel]
+application-id='gnome-network-panel.desktop'
+
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
+
+[org/gnome/desktop/notifications/application/libreoffice-calc]
+application-id='libreoffice-calc.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-baobab]
+application-id='org.gnome.baobab.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-nautilus]
+application-id='org.gnome.Nautilus.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-tweaks]
 application-id='org.gnome.tweaks.desktop'
@@ -62,8 +115,20 @@ application-id='org.gnome.tweaks.desktop'
 [org/gnome/desktop/notifications/application/org-keepassxc-keepassxc]
 application-id='org.keepassxc.KeePassXC.desktop'
 
+[org/gnome/desktop/notifications/application/pycharm-professional]
+application-id='pycharm-professional.desktop'
+
+[org/gnome/desktop/notifications/application/slack]
+application-id='slack.desktop'
+
+[org/gnome/desktop/notifications/application/teams]
+application-id='teams.desktop'
+
 [org/gnome/desktop/notifications/application/telegramdesktop]
 application-id='telegramdesktop.desktop'
+
+[org/gnome/desktop/notifications/application/zoom]
+application-id='Zoom.desktop'
 
 [org/gnome/desktop/peripherals/mouse]
 accel-profile='default'
@@ -76,55 +141,144 @@ tap-to-click=true
 two-finger-scrolling-enabled=true
 
 [org/gnome/desktop/session]
-idle-delay=uint32 180
+idle-delay=uint32 0
 
 [org/gnome/desktop/sound]
 event-sounds=true
-theme-name='freedesktop'
+theme-name='__custom'
+
+[org/gnome/desktop/wm/keybindings]
+activate-window-menu=@as []
+begin-move=@as []
+begin-resize=@as []
+move-to-workspace-1=['<Primary><Super>y']
+move-to-workspace-2=['<Primary><Super>u']
+move-to-workspace-3=['<Primary><Super>i']
+move-to-workspace-4=['<Primary><Super>o']
+switch-to-workspace-1=['<Alt><Super>y']
+switch-to-workspace-2=['<Alt><Super>u']
+switch-to-workspace-3=['<Alt><Super>i']
+switch-to-workspace-4=['<Alt><Super>o']
+unmaximize=@as []
 
 [org/gnome/desktop/wm/preferences]
 button-layout='appmenu:close'
-num-workspaces=1
+num-workspaces=7
+
+[org/gnome/epiphany/state]
+is-maximized=false
+window-position=(-1, -1)
+window-size=(960, 1048)
 
 [org/gnome/evolution-data-server]
 migrated=true
 network-monitor-gio-name=''
 
+[org/gnome/file-roller/listing]
+list-mode='as-folder'
+name-column-width=250
+show-path=false
+sort-method='name'
+sort-type='ascending'
+
+[org/gnome/file-roller/ui]
+sidebar-width=200
+window-height=480
+window-width=600
+
+[org/gnome/meld]
+folder-status-filters=['normal', 'normal', 'new', 'modified']
+
+[org/gnome/meld/window-state]
+height=1011
+width=960
+
 [org/gnome/mutter]
 dynamic-workspaces=false
 
+[org/gnome/mutter/keybindings]
+toggle-tiled-left=@as []
+toggle-tiled-right=@as []
+
+[org/gnome/nautilus/compression]
+default-compression-format='zip'
+
+[org/gnome/nautilus/list-view]
+default-zoom-level='small'
+
 [org/gnome/nautilus/preferences]
-default-folder-viewer='icon-view'
+default-folder-viewer='list-view'
 search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(890, 550)
+initial-size=(960, 1048)
 maximized=false
+
+[org/gnome/nm-applet/eap/3a2c1734-e409-40e1-a2ba-0f311ec7ccde]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/ac9b8fff-7575-48c1-938e-0fe68e59db2b]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/ef270369-2da2-484c-8152-dbe1acba0214]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
 
 [org/gnome/settings-daemon/plugins/color]
 night-light-enabled=true
 night-light-temperature=uint32 2700
 
 [org/gnome/settings-daemon/plugins/power]
+idle-dim=false
 power-button-action='suspend'
+sleep-inactive-ac-type='nothing'
 
 [org/gnome/shell]
-favorite-apps=['Alacritty.desktop', 'org.gnome.Nautilus.desktop']
+command-history=['tmux', 'r']
+disable-user-extensions=false
+disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'screenshot-window-sizer@gnome-shell-extensions.gcampax.github.com', 'window-list@gnome-shell-extensions.gcampax.github.com', 'windowsNavigator@gnome-shell-extensions.gcampax.github.com']
+enabled-extensions=['pop-shell@system76.com', 'workspace-indicator@gnome-shell-extensions.gcampax.github.com', 'sound-output-device-chooser@kgshank.net', 'clipboard-indicator@tudmotu.com', 'freon@UshakovVasilii_Github.yahoo.com']
+favorite-apps=['Alacritty.desktop', 'visual-studio-code-insiders.desktop', 'firefox-developer-edition.desktop', 'telegramdesktop.desktop', 'org.gnome.Nautilus.desktop', 'google-chrome.desktop', 'org.keepassxc.KeePassXC.desktop']
+had-bluetooth-devices-setup=true
 welcome-dialog-last-shown-version='40.3'
+
+[org/gnome/shell/extensions/freon]
+hot-sensors=['__max__', '__average__']
+position-in-panel='right'
+show-degrees-on-panel=true
+show-icon-on-panel=false
+
+[org/gnome/shell/extensions/pop-shell]
+active-hint=true
+gap-inner=uint32 0
+gap-outer=uint32 0
+hint-color-rgba='rgba(251,184,108,0.422297)'
+smart-gaps=false
+tile-by-default=true
+
+[org/gnome/shell/extensions/sound-output-device-chooser]
+hide-on-single-device=false
+ports-settings='{"version":2,"ports":[]}'
 
 [org/gnome/shell/weather]
 automatic-location=true
-locations=[<(uint32 2, <('London Borough of Haringey, United Kingdom', '', false, [(0.90037923017036436, -0.0018397534144189839)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
+locations=[<(uint32 2, <('Málaga', 'LEMG', true, [(0.63995406488235163, -0.078248922313314942)], [(0.64082672950834885, -0.077085381114180396)])>)>]
 
 [org/gnome/shell/world-clocks]
-locations=[<(uint32 2, <('London', 'EGWU', true, [(0.89971722940307675, -0.007272211034407213)], [(0.89884456477707964, -0.0020362232784242244)])>)>, <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>]
+locations=[<(uint32 2, <('San Francisco', 'KOAK', false, [(0.65832848982162007, -2.133408063190589)], [(0.65832848982162007, -2.133408063190589)])>)>, <(uint32 2, <('Bogotá', 'SKBO', true, [(0.082321368870163392, -1.2941616403537954)], [(0.080285145591739146, -1.2929980817013682)])>)>, <(uint32 2, <('London', 'EGWU', false, [(0.89971722940307675, -0.007272211034407213)], [(0.89971722940307675, -0.007272211034407213)])>)>, <(uint32 2, <('Bilbao', 'LEBB', true, [(0.75572756611354464, -0.051196318907402824)], [(0.75485490148754752, -0.051778106960262617)])>)>]
 
 [org/gnome/software]
-check-timestamp=int64 1629698410
+check-timestamp=int64 1635057244
 
 [org/gnome/tweaks]
 show-extensions-notice=false
+
+[org/gtk/settings/color-chooser]
+custom-colors=[(0.98431372549019602, 0.72156862745098038, 0.42352941176470582, 0.42229729729729731), (0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 0.68918900000000005), (0.98431372549019602, 0.72156862745098038, 0.42352941176470582, 0.68918918918918914), (0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 1.0)]
+selected-color=(true, 0.98431372549019602, 0.72156862745098038, 0.42352941176470582, 0.42229729729729731)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
@@ -132,10 +286,10 @@ location-mode='path-bar'
 show-hidden=false
 show-size-column=true
 show-type-column=true
-sidebar-width=157
-sort-column='name'
+sidebar-width=348
+sort-column='type'
 sort-directories-first=false
 sort-order='ascending'
 type-format='category'
-window-position=(359, 82)
+window-position=(239, 66)
 window-size=(1203, 902)
