wipman: update tags

--- a/wip-manager/.config/wip-manager/config.json
+++ b/wip-manager/.config/wip-manager/config.json
@@ -3,6 +3,7 @@
   "archive_path": "/home/dtg/Dropbox/projects-dropbox/archived_TODOs.md",
   "tags": [
     "2109bio",
+    "2111amsterdam",
     "2112bio",
     "accounting",
     "angela",
