--- a/wip-manager/.config/wip-manager/config.json
+++ b/wip-manager/.config/wip-manager/config.json
@@ -11,7 +11,6 @@
     "billy",
     "chores",
     "coding",
-    "css",
     "finance",
     "fitness",
     "health",
@@ -22,13 +21,11 @@
     "laptop",
     "lets_assist",
     "new_laptop",
+    "real_estate",
     "social",
     "tempus",
     "transport",
-    "trip",
     "trips",
-    "walix",
     "wipman",
-    "wiserfunding",
   ],
 }
