t: add BBM entries

--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -43,13 +43,14 @@
       ]
     },
     {
-      "id": "175287260",
-      "name": "Walix",
+      "id": 179948465,
+      "name": "BBM",
       "entries": [
         "Coding",
         "General",
         "Meeting",
-        "Preparation (no charge)"
+        "Pairing",
+        "Training"
       ]
     },
     {
