vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -232,6 +232,7 @@
     "Postgres",
     "preprod",
     "Primazo",
+    "pseudocode",
     "pytest",
     "React's",
     "repos",
@@ -242,11 +243,14 @@
     "Scrapy",
     "SCSRE",
     "shipcat",
+    "smishing",
     "solutionize",
     "SSDLC",
     "supernode",
     "supernodes",
     "Terraform",
+    "timesheet",
+    "timesheets",
     "tmux",
     "Torralba",
     "triaging",
@@ -255,6 +259,7 @@
     "UWSGI",
     "venv",
     "virtualenv",
+    "vishing",
     "VLAN",
     "voyeurismo",
     "Wayland",
@@ -347,5 +352,12 @@
       "before": [ "j", "j" ],
       "after": [ "<Esc>" ],
     }
+  ],
+  "cSpell.enabled": true,
+  "cSpell.useGitignore": false,
+  "cSpell.enableFiletypes": [
+    "!asciidoc",
+    "!restructuredtext",
+    "markdown",
   ],
 }
