vscode: add hotkeys to insert date with timezone

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -284,6 +284,7 @@
   "gitlens.views.showRelativeDateMarkers": false,
 
   "insertDateString.format": "YYYY-MM-DD",
+  "insertDateString.formatTime": " hh:mm:ss ZZZ",
 
   "jupyter.askForKernelRestart": false,
 
