vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -164,6 +164,8 @@
     "aita",
     "algo",
     "Ander",
+    "anki",
+    "anymore",
     "anynomisation",
     "APAC",
     "Atlassian",
@@ -180,21 +182,25 @@
     "datagrams",
     "datastore",
     "deduplication",
+    "direnv",
     "dtgoitia",
     "ebitda",
     "eneatipo",
     "eneatipos",
+    "envrc",
     "Eyeo",
     "Farisha",
     "GDPR",
     "Goitia",
     "Grafana",
     "hardcoded",
+    "Hasura",
     "hiru",
     "HMRC",
     "Ibai",
     "idempotency",
     "immunosuppressed",
+    "isort",
     "Iturricha",
     "Javi",
     "jira",
@@ -214,6 +220,7 @@
     "microsevices",
     "miniflow",
     "miniflows",
+    "Miro",
     "mismeasurement",
     "monkeypatching",
     "Monzo",
@@ -238,6 +245,7 @@
     "repos",
     "resizeable",
     "restructuration",
+    "Revolut",
     "románticamente",
     "sapiosexual",
     "Scrapy",
@@ -245,6 +253,7 @@
     "shipcat",
     "smishing",
     "solutionize",
+    "Splitwise",
     "SSDLC",
     "supernode",
     "supernodes",
@@ -253,6 +262,7 @@
     "timesheets",
     "tmux",
     "Torralba",
+    "TOTP",
     "triaging",
     "undertriage",
     "unreusable",
@@ -264,6 +274,7 @@
     "voyeurismo",
     "Wayland",
     "wipman",
+    "Xero",
     "xmonad",
     "Zopa",
     "Zwiessele"
