wipman: update tags

--- a/wip-manager/.config/wip-manager/config.json
+++ b/wip-manager/.config/wip-manager/config.json
@@ -5,12 +5,17 @@
     "2109bio",
     "2111amsterdam",
     "2112bio",
+    "2203granada",
+    "2204budapest",
     "accounting",
     "angela",
     "babylon",
+    "bbm",
     "billy",
     "chores",
+    "climbing",
     "coding",
+    "css",
     "finance",
     "fitness",
     "health",
@@ -25,7 +30,9 @@
     "social",
     "tempus",
     "transport",
+    "trip",
     "trips",
+    "walix",
     "wipman",
   ],
 }
