vscode: update user dictionary

--- a/vscode/.config/Code - Insiders/User/settings.json
+++ b/vscode/.config/Code - Insiders/User/settings.json
@@ -170,6 +170,7 @@
     "Atlassian",
     "autoanálisis",
     "autogestión",
+    "bluetooth",
     "Colbourne",
     "Conor",
     "cookiecutter",
@@ -182,6 +183,7 @@
     "datastore",
     "deduplication",
     "direnv",
+    "dotfiles",
     "dtgoitia",
     "ebitda",
     "eneatipo",
@@ -207,6 +209,7 @@
     "Karolina",
     "Kasia",
     "Keepass",
+    "keypair",
     "kubectl",
     "kubernetes",
     "lockdown",
@@ -227,10 +230,12 @@
     "neighbour",
     "neighbours",
     "overtriage",
+    "pacman",
     "parallelization",
     "perfeccionista",
     "performant",
     "pipenv",
+    "PKGBUILD",
     "Poliamor",
     "poliamorosa",
     "poliamoroso",
@@ -239,6 +244,7 @@
     "preprod",
     "Primazo",
     "pseudocode",
+    "pyproject",
     "pytest",
     "React's",
     "repos",
