--- a/t/.config/t/config.jsonc
+++ b/t/.config/t/config.jsonc
@@ -3,7 +3,7 @@
     {
       "id": 28787086,
       "name": "Learn and study",
-      "entries": ["Coding", "Study coding"]
+      "entries": ["Coding", "Study coding", "Drawing"]
     },
     {
       "id": 171740062,
@@ -18,31 +18,6 @@
       ]
     },
     {
-      "id": 174067391,
-      "name": "CSS Investments",
-      "entries": [
-        "Coding",
-        "General",
-        "Meeting",
-        "Preparation (no charge)"
-      ]
-    },
-    {
-      "id": 174277494,
-      "name": "Karat",
-      "entries": [
-        "Coding",
-        "General",
-        "Interviewing candidates",
-        "Interview setup",
-        "Meeting",
-        "Preparation (no charge)",
-        "Training",
-        "Training (self-study)",
-        "Write-ups"
-      ]
-    },
-    {
       "id": 179948465,
       "name": "BBM",
       "entries": [
@@ -50,6 +25,7 @@
         "General",
         "Meeting",
         "Pairing",
+        "Reviewing PRs",
         "Training"
       ]
     },
