keepassxc: add latest config

--- a/keepassxc/.config/keepassxc/keepassxc.ini
+++ b/keepassxc/.config/keepassxc/keepassxc.ini
@@ -1,5 +1,5 @@
 [General]
-ConfigVersion=1
+ConfigVersion=2
 UpdateCheckMessageShown=true
 UseGroupIconOnEntryCreation=false
 
@@ -25,10 +25,15 @@ QuietSuccess=true
 
 [PasswordGenerator]
 AdditionalChars=
+AdvancedMode=true
+Braces=true
+Dashes=true
 ExcludedChars=
-Length=53
-Type=1
-WordCount=3
+Length=24
+Logograms=true
+Math=true
+Type=0
+WordCount=9
 
 [Security]
 IconDownloadFallback=true
