billy: update config file

--- a/billy/.config/billy/config.jsonc
+++ b/billy/.config/billy/config.jsonc
@@ -1,8 +1,9 @@
 {
   "projects": [
-    { "id": 28787086, "alias": "learn" },
-    { "id": 171740062, "alias": "hiru" },
-    { "id": 174067391, "alias": "css" },
-    { "id": 174277494, "alias": "karat" }
+    // { "id": 28787086, "alias": "learn" },
+    { "id": 171740062, "alias": "hiru", "start": "2021-07-12" },
+    { "id": 174067391, "alias": "css", "start": "2021-08-24" },
+    { "id": 174277494, "alias": "karat", "start":"2021-09-09" },
+    { "id": 175287260, "alias": "walix", "start":"2021-10-06" }
   ]
 }
